<resources>
    <string name="app_name">JarvisApp</string>

    //Home page
    <string name="client">client</string>
    <string name="admin">admin</string>
    <string name="access">Select  your  profile</string>

    //Login page
    <string name="title">title</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn">btn</string>

    //Main page
    <string name="title_scan">Lancer le Scan BLE</string>
    <string name="connected">Connected</string>
    <string name="clic_bouton_principal">Nombre de clics :</string>
    <string name="recevoir">RECEVOIR LES MOUVEMENTS</string>

</resources>