<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_jarvis_inverse"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ImageTitle"
        android:layout_width="392dp"
        android:layout_height="167dp"
        android:contentDescription="@string/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/log_in" />

    <ImageButton
        android:id="@+id/Btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/round_button" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/btn_1"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/Btn1"
        app:layout_constraintEnd_toEndOf="@+id/Btn1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/Btn1"
        app:layout_constraintTop_toTopOf="@+id/Btn1" />

    <ImageButton
        android:id="@+id/Btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/round_button" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/btn_2"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/Btn2"
        app:layout_constraintEnd_toEndOf="@+id/Btn2"
        app:layout_constraintStart_toStartOf="@+id/Btn2"
        app:layout_constraintTop_toTopOf="@+id/Btn2" />

    <ImageButton
        android:id="@+id/Btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/round_button" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/btn_3"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/Btn3"
        app:layout_constraintEnd_toEndOf="@+id/Btn3"
        app:layout_constraintStart_toStartOf="@+id/Btn3"
        app:layout_constraintTop_toTopOf="@+id/Btn3" />

    <ImageButton
        android:id="@+id/Btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/round_button" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/btn_4"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/Btn4"
        app:layout_constraintEnd_toEndOf="@+id/Btn4"
        app:layout_constraintStart_toStartOf="@+id/Btn4"
        app:layout_constraintTop_toTopOf="@+id/Btn4" />

    <ImageButton
        android:id="@+id/Btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/round_button" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/btn_5"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/Btn5"
        app:layout_constraintEnd_toEndOf="@+id/Btn5"
        app:layout_constraintStart_toStartOf="@+id/Btn5"
        app:layout_constraintTop_toTopOf="@+id/Btn5" />

    <ImageButton
        android:id="@+id/Btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/round_button" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/btn_6"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/Btn6"
        app:layout_constraintEnd_toEndOf="@+id/Btn6"
        app:layout_constraintStart_toStartOf="@+id/Btn6"
        app:layout_constraintTop_toTopOf="@+id/Btn6" />

    <ImageButton
        android:id="@+id/Btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@drawable/round_button" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/btn_7"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/Btn7"
        app:layout_constraintEnd_toEndOf="@+id/Btn7"
        app:layout_constraintStart_toStartOf="@+id/Btn7"
        app:layout_constraintTop_toTopOf="@+id/Btn7" />

    <ImageButton
        android:id="@+id/Btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@drawable/round_button" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/btn_8"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/Btn8"
        app:layout_constraintEnd_toEndOf="@+id/Btn8"
        app:layout_constraintStart_toStartOf="@+id/Btn8"
        app:layout_constraintTop_toTopOf="@+id/Btn8" />

    <ImageButton
        android:id="@+id/Btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@drawable/round_button" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/btn_9"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/Btn9"
        app:layout_constraintEnd_toEndOf="@+id/Btn9"
        app:layout_constraintStart_toStartOf="@+id/Btn9"
        app:layout_constraintTop_toTopOf="@+id/Btn9" />

    <ImageButton
        android:id="@+id/Btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:srcCompat="@drawable/round_button" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/btn_0"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/Btn0"
        app:layout_constraintEnd_toEndOf="@+id/Btn0"
        app:layout_constraintStart_toStartOf="@+id/Btn0"
        app:layout_constraintTop_toTopOf="@+id/Btn0" />

    <ImageView
        android:id="@+id/grey1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/round_light_grey" />

    <ImageView
        android:id="@+id/grey2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/round_light_grey" />

    <ImageView
        android:id="@+id/grey3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/round_light_grey" />

    <ImageView
        android:id="@+id/grey4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/round_light_grey" />


</androidx.constraintlayout.widget.ConstraintLayout>